k8s/mediaserver/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: mediaserver
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.100.233
spec:
  type: LoadBalancer
  selector:
    app: jackett
  ports:
    - port: 9117
